[package]
name = "pol_os"
version = "0.1.0"
authors = ["Lucas Polo <pradopolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Specific Things

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"