[package]
name = "pol_os"
version = "0.1.0"
authors = ["Lucas Polo <pradopolo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"

# Specific Things

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"